--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp src/instructions.md dist/instructions.md",
     "start": "npm run build && node dist/server.js",
-    "dev": "tsc --watch & node --watch dist/server.js",
+    "dev": "tsc --watch & node --watch dist/streamable-http-server.js",
+    "dev:stdio": "tsc --watch & node --watch dist/server.js",
+    "dev:sse": "tsc --watch & node --watch dist/sse-server.js",
+    "dev:streamable": "tsc --watch & node --watch dist/streamable-http-server.js",
     "clean": "rm -rf dist"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "express": "^4.18.0",
+    "cors": "^2.8.0",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/express": "^4.17.0",
+    "@types/cors": "^2.8.0",
     "typescript": "^5.3.0"
   },
   "keywords": ["mcp", "rockrms", "sql", "server", "typescript"],
