feat(config) update environment configuration to support username/password authentication and document changes in README

--- a/config.env.example
+++ b/config.env.example
@@ -3,7 +3,13 @@
 
 # Rock RMS API Configuration
 ROCK_API_BASE_URL=https://your-rock-instance.com
-ROCK_API_KEY=your_api_key_here
+
+# Authentication (username/password is recommended)
+ROCK_USERNAME=your_username
+ROCK_PASSWORD=your_password
+
+# Alternative: API Key (may have permission limitations)
+# ROCK_API_KEY=your_api_key_here
 
 # Server Configuration
 PORT=3003
